--- a/tractags/locale/de/LC_MESSAGES/tractags.po
+++ b/tractags/locale/de/LC_MESSAGES/tractags.po
@@ -1,15 +1,16 @@
 # German (Germany) translations for TracTags.
-# Copyright (C) 2010-2013
+# Copyright (C) 2010-2014
 # This file is distributed under the same license as the TracTags
 # project.
-# Steffen Hoffmann <hoff.st@web.de>, 2014.
 #
+# Translators:
+# Steffen Hoffmann <hoff.st@web.de>, 2012,2014
 msgid ""
 msgstr ""
 "Project-Id-Version: TracTags 0.7\n"
 "Report-Msgid-Bugs-To: hoff.st@shaas.net\n"
 "POT-Creation-Date: 2014-03-30 13:34+0200\n"
-"PO-Revision-Date: 2010-09-11 01:26+0200\n"
+"PO-Revision-Date: 2014-03-30 12:17+0000\n"
 "Last-Translator: Steffen Hoffmann <hoff.st@web.de>\n"
 "Language-Team: German de_DE <trac-dev@googlegroups.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -381,7 +382,4 @@ msgid ""
 msgstr ""
 "Anzeige aller Tags, die %(mincount)s-mal oder häufiger vorkommen ([1:alle"
 " Tags ansehen])"
-
-#~ msgid "'''tags''' %(added)s%(delim)s%(removed)s"
-#~ msgstr "'''Tags''' %(added)s%(delim)s%(removed)s"
 
