--- a/tractags/locale/tr/LC_MESSAGES/tractags.po
+++ b/tractags/locale/tr/LC_MESSAGES/tractags.po
@@ -1,20 +1,20 @@
-# Italian translations for TracTags.
-# Copyright (C) 2014
+# Turkish translations for TracTags.
+# Copyright (C) 2014 ORGANIZATION
 # This file is distributed under the same license as the TracTags
 # project.
 #
 # Translators:
-# Roberto Longobardi <seccanj@gmail.com>, 2011
+# ks780 <ks780@mynet.com>, 2013
 msgid ""
 msgstr ""
-"Project-Id-Version: TracTags 0.7\n"
+"Project-Id-Version: Trac Plugin L10N\n"
 "Report-Msgid-Bugs-To: hoff.st@shaas.net\n"
 "POT-Creation-Date: 2014-03-30 13:34+0200\n"
 "PO-Revision-Date: 2014-03-30 12:17+0000\n"
-"Last-Translator: Roberto Longobardi <seccanj@gmail.com>\n"
-"Language-Team: Italian (http://www.transifex.com/projects/p/Trac_Plugin-"
-"L10N/language/it/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Last-Translator: Steffen Hoffmann <hoff.st@web.de>\n"
+"Language-Team: Turkish (http://www.transifex.com/projects/p/Trac_Plugin-"
+"L10N/language/tr/)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -22,11 +22,11 @@ msgstr ""
 
 #: tractags/admin.py:27
 msgid "Tag System"
-msgstr ""
+msgstr "Etiket Sistemi"
 
 #: tractags/admin.py:27 tractags/templates/admin_tag_change.html:42
 msgid "Replace"
-msgstr ""
+msgstr "Değiştir"
 
 #: tractags/admin.py:52
 msgid "Selected current tag(s) and either new tag or delete approval are required"
@@ -35,7 +35,7 @@ msgstr ""
 #: tractags/api.py:541
 #, python-format
 msgid "Tags are not supported on the '%s' realm"
-msgstr "I tag non sono supportati sul reame '%s'"
+msgstr ""
 
 #: tractags/db.py:33
 msgid ""
@@ -82,15 +82,6 @@ msgid ""
 "    See tags documentation for the query syntax.\n"
 "    "
 msgstr ""
-"Lista delle risorse taggate.\n"
-"\n"
-"    Uso: \n"
-"\n"
-"    {{{\n"
-"    [[ListTagged(query)]]\n"
-"    }}}\n"
-"\n"
-"    Consultare la documentazione sui tag per la sintassi delle query."
 
 #: tractags/macros.py:235
 msgid "Id"
@@ -105,73 +96,73 @@ msgstr ""
 #: tractags/wiki.py:227 tractags/wiki.py:254
 #: tractags/templates/admin_tag_change.html:13
 msgid "Tags"
-msgstr "Tag"
+msgstr "Etiketler"
 
 #: tractags/macros.py:372
 msgid "No tags found"
-msgstr ""
+msgstr "Etiket bulunamadı"
 
 #: tractags/macros.py:387
 #, python-format
 msgid "Page %(num)d"
-msgstr ""
+msgstr "Sayfa %(num)d"
 
 #: tractags/macros.py:398
 msgid "Next Page"
-msgstr ""
+msgstr "Sonraki Sayfa"
 
 #: tractags/macros.py:403
 msgid "Previous Page"
-msgstr ""
+msgstr "Önceki Sayfa"
 
 #: tractags/query.py:191
 msgid "Attribute must be a word"
-msgstr "L'attributo deve essere una parola"
+msgstr "Özellik bir kelime olmalı"
 
 #: tractags/query.py:216
 msgid "Expected ) at end of sub-expression"
-msgstr "Previsto ) alla fine del sotto-espressione"
+msgstr "Alt ifadenin sonunda ) bekleniyor"
 
 #: tractags/query.py:233
 msgid "Unexpected end of string"
-msgstr "Inaspettata fine della stringa"
+msgstr "Beklenmedik metin sonu"
 
 #: tractags/query.py:239
 #, python-format
 msgid "Expected terminal, got '%s'"
-msgstr "Carattere terminale previsto, trovato '%s'"
+msgstr ""
 
 #: tractags/query.py:427
 #, python-format
 msgid "Invalid attribute '%s'"
-msgstr "Attributo non valido '%s'"
+msgstr ""
 
 #: tractags/ticket.py:44
 msgid "List of ticket fields to expose as tags."
-msgstr "Elenco dei campi della segnalazione da esporre come tag."
+msgstr ""
 
 #: tractags/ticket.py:47
 msgid "Do not collect tags from closed tickets."
-msgstr "Non collezionare i tag da segnalazioni chiuse."
+msgstr "Kapalı biletlerden etiketleri toplama."
 
 #. TRANSLATOR: The meta-nav link label.
 #: tractags/web_ui.py:121
 msgid "Back to Cloud"
-msgstr ""
+msgstr "Buluta geri dönb"
 
 #: tractags/wiki.py:220
 #, python-format
 msgid "%(tags)s added"
 msgid_plural "%(tags)s added"
-msgstr[0] "%(tags)s aggiunto"
-msgstr[1] "%(tags)s aggiunti"
+msgstr[0] ""
+msgstr[1] ""
 
 #: tractags/wiki.py:224
 #, python-format
 msgid "%(tags)s removed"
 msgid_plural "%(tags)s removed"
-msgstr[0] "%(tags)s eliminato"
-msgstr[1] "%(tags)s eliminati"
+msgstr[0] ""
+msgstr[1] ""
 
 #. TRANSLATOR: How to delimit added and removed tags.
 #: tractags/wiki.py:226
@@ -181,13 +172,13 @@ msgstr ""
 #. TRANSLATOR: Label text for link to '/tags'.
 #: tractags/wiki.py:270
 msgid "view all tags"
-msgstr "vedi tutti i Tag"
+msgstr "Tüm etiketleri görüntüle"
 
 #. TRANSLATOR: ... (view all tags)
 #: tractags/wiki.py:272
 #, python-format
 msgid "Tag under: (%(tags_link)s)"
-msgstr "Tagga con: (%(tags_link)s)"
+msgstr "Etiketlendi: (%(tags_link)s)"
 
 #: tractags/wiki.py:353
 msgid "no permission to view tags"
@@ -195,16 +186,15 @@ msgstr ""
 
 #: tractags/templates/admin_tag_change.html:16
 msgid "Manage Tags"
-msgstr ""
+msgstr "Etiketleri Yönet"
 
 #: tractags/templates/admin_tag_change.html:19
-#
 msgid "Filters"
-msgstr "Filtri"
+msgstr ""
 
 #: tractags/templates/admin_tag_change.html:20
 msgid "Tag filters"
-msgstr "Filtra i Tag"
+msgstr ""
 
 #: tractags/templates/admin_tag_change.html:21
 msgid "Realms"
@@ -212,7 +202,7 @@ msgstr ""
 
 #: tractags/templates/admin_tag_change.html:30
 msgid "Update"
-msgstr "Aggiorna"
+msgstr ""
 
 #: tractags/templates/admin_tag_change.html:43
 msgid ""
@@ -226,7 +216,7 @@ msgstr ""
 
 #: tractags/templates/admin_tag_change.html:49
 msgid "Current Tag:"
-msgstr ""
+msgstr "Geçerli Etiket:"
 
 #: tractags/templates/admin_tag_change.html:60
 msgid ""
@@ -278,15 +268,15 @@ msgstr ""
 
 #: tractags/templates/tag_view.html:25
 msgid "Filter Tags"
-msgstr "Filtra i Tag"
+msgstr "Filtre Etiketleri"
 
 #: tractags/templates/tag_view.html:35
 msgid "Error:"
-msgstr "Errore:"
+msgstr "Hata:"
 
 #: tractags/templates/tag_view.html:38
 msgid "Query syntax:"
-msgstr "Sintassi della query:"
+msgstr "Sorgu sözdizimi"
 
 #: tractags/templates/tag_view.html:39
 msgid ""
@@ -297,14 +287,6 @@ msgid ""
 "            [11:Quote strings to include special characters.]\n"
 "            [12:Restrict search to a specific realm with [13:realm:wiki].]"
 msgstr ""
-"[1:Usa [2:tag1 tag2] per verificare [3:tutti] i tag.]\n"
-"            [4:[5:tag1 o tag2] corrisponderà a [6:ogni] tag.]\n"
-"            [7:Nega un tag con [8:-tag1].]\n"
-"            [9:Raggruppa sotto-query con [10:(tag1 o tag2)].]\n"
-"            [11:Racchiudi le stringhe tra virgolette per includere "
-"caratteri speciali]\n"
-"            [12:Restringi la ricerca ad un ambito specifico con "
-"[13:realm:wiki].]"
 
 #: tractags/templates/tag_view.html:56
 msgid "Go to wiki page"
